--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
 .gameScreen-block{
     position: absolute;
     min-height: 3rem;
-    min-width: 18rem;
+    min-width: 19rem;
     background-color: #caf7ff;
     border-radius: 10px;
     margin-top: 5rem;
@@ -119,7 +119,7 @@ body {
     font-size: 2rem;
 }
 
-@-webkit-keyframes glow {
+@keyframes glow {
     from {
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
     }
