--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     color: #fff;
     padding: 12px;
     border-radius: 3px;
+    border-color: #fff
     text-decoration: none;
     font-family: Tahoma;
     font-size: 18px;
