--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     color: #fff;
     padding: 12px;
     border-radius: 3px;
-    border-color: #fff
+    border-color: #fff;
     text-decoration: none;
     font-family: Tahoma;
     font-size: 18px;
@@ -86,7 +86,7 @@ body {
     min-width: 19rem;
     background-color: #caf7ff;
     border-radius: 10px;
-    margin-top: 5rem;
+    margin-top: 8rem;
     z-index: 2;
 }
 
@@ -94,6 +94,12 @@ body {
     z-index: 1;
     position:relative;
 }
+
+.second{
+    display: none;
+    margin-top: 14.5rem;
+}
+
 
 
 
